first run of jekyll

--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Daniel Ma</title>
-</head>
+---
+layout: default
+title: Daniel Ma
+---
 
-<body>
-<h1>Daniel Ma!</h1>
-</body>
-</html>
+YEAH!
