--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head> 
 	<title>Kona Calendar</title> 
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <link rel=”apple-touch-icon” href=”/apple-touch-icon.png”/>
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png"/>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css" />
     <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
     <script type="text/javascript" charset="utf-8">
