--- a/solutions/ajaxData/index.html
+++ b/solutions/ajaxData/index.html
@@ -3,13 +3,14 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>Click Event</title>  
+        <title>Get Ajax Data</title>   
     </head>
     <body>
         <p>
-            <span id="clickMe">Click Me!</span>
+            <button id="getBtn">Get Ajax Data</button>
         </p>
+        <div id="response"></div>
         
-        <script src="ClickEvent.js" type="text/javascript" charset="utf-8"></script> 
+        <script src="AjaxData.js" type="text/javascript" charset="utf-8"></script>
     </body>
 </html>
