Got everything good to go and submitting

--- a/solutions/ajaxData/index.html
+++ b/solutions/ajaxData/index.html
@@ -6,6 +6,7 @@
         <title>Get Ajax Data</title>   
     </head>
     <body>
+      <h2>Ajax Data</h2>
         <p>
             <button id="getBtn">Get Ajax Data</button>
         </p>
