--- a/solutions/clickEvent/index.html
+++ b/solutions/clickEvent/index.html
@@ -6,9 +6,7 @@
         <title>Click Event</title>   
     </head>
     <body>
-        <p>
-            <span id="clickMe">Click Me!</span>
-        </p>
+      <h2 id="clickMe">Click Me!</h2>
         
         <script src="ClickEvent.js" type="text/javascript" charset="utf-8"></script>
     </body>
