--- a/solutions/dataRetrieval/index.html
+++ b/solutions/dataRetrieval/index.html
@@ -5,8 +5,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>Data Retrieval</title>
         <link rel="stylesheet" href="dataRetrieval.css" type="text/css" media="screen" title="no title" charset="utf-8">  
+        
     </head>
     <body>
+        <h2>Data Retrieval</h2>
         <div id="tableContainer">Loading...</div>
         
         <!--[if gte IE 7]>
