--- a/solutions/dataRetrieval/index.html
+++ b/solutions/dataRetrieval/index.html
@@ -15,6 +15,6 @@
           <script src="json2.js" type="text/javascript" charset="utf-8"></script>
         <![endif]-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="DataRetrieval.js" type="text/javascript" charset="utf-8"></script>
+        <script src="dataRetrieval.js" type="text/javascript" charset="utf-8"></script>
     </body>
 </html>
