--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 	<head> 
 	<title>Kona Calendar</title> 
-	<meta name="viewport" content="width=device-width, initial-scale=1"> 
+	<meta name="viewport" content="width=320.1, initial-scale=1"> 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png"/>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css" />
