--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 	<head> 
-	<title>Kona Calendar....</title> 
+	<title>Kona Calendar....midway</title> 
 	<meta name="viewport" content="width=320.1, initial-scale=1"> 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png"/>
